# simple_weather_forecast

./: .env_sample  README.md  docker-compose.yml  pytest.ini  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/files/: cities.txt
backend/forecast/: apps.py  forms.py  urls.py  utils.py  views.py
backend/static/js/: theme_mode_switcher.js
backend/templates/: base.html
backend/templates/forecast/: detailed_forecast.html  index.html
backend/templates/includes/: city_autocomplete.html  current_weather.html  daily_forecast.html  header.html  hourly_forecast.html  map.html  searched_cities.html
backend/tests/: test_views.py
backend/weather_forecast/: settings.py  urls.py
gateway/: Dockerfile  nginx.conf
